# dicom_parser_py

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: dcm_lib.py  export_dicom_tags.py
